Added question editor panel

--- a/src/app/minicomponents/sidenav/sidenav.component.html
+++ b/src/app/minicomponents/sidenav/sidenav.component.html
@@ -58,6 +58,13 @@
 
 
   <mat-list-item (click)="goto('/about')">
+    <a matLine>Quizzes</a>
+    <button mat-icon-button>
+      <mat-icon>help</mat-icon>
+    </button>
+  </mat-list-item>
+
+  <mat-list-item (click)="goto('/about')">
     <a matLine>About us</a>
     <button mat-icon-button>
       <mat-icon>info</mat-icon>
