--- a/src/app/panels/create-company-panel/create-company-panel.component.html
+++ b/src/app/panels/create-company-panel/create-company-panel.component.html
@@ -82,7 +82,7 @@
       <div>
         <button mat-button matStepperPrevious>Back</button>
         <button mat-button (click)="stepper.reset()">Reset</button>
-        <button mat-button (click)="doneEvent.emit(company)">Post</button>
+        <button mat-button (click)="createCompany()">Post</button>
       </div>
     </mat-step>
   </mat-vertical-stepper>
