--- a/src/app/panels/new-post-panel/new-post-panel.component.html
+++ b/src/app/panels/new-post-panel/new-post-panel.component.html
@@ -1,5 +1,5 @@
 <div class="Image">
-  <img src="https://source.unsplash.com/1600x900/?product">
+  <img src="https://images.unsplash.com/photo-1506757144316-2ff47151133b?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=900&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=80&w=1600">
 </div>
 <form class="createPost">
   <h1 style="margin: 0">
