--- a/src/app/subcomponents/resume/resume.component.html
+++ b/src/app/subcomponents/resume/resume.component.html
@@ -362,6 +362,7 @@
                   [min]="0"
                   [step]="1"
                   [value]="lang.level? lang.level: 5"
+                  [(ngModel)]="lang.level"
                   [thumbLabel]="true">
                 </mat-slider>
 
@@ -416,6 +417,7 @@
                   [min]="0"
                   [step]="1"
                   [value]="skill.level? skill.level: 5"
+                  [(ngModel)]="skill.level"
                   [thumbLabel]="true">
                 </mat-slider>
 
