--- a/src/app/view_components/register/register.component.css
+++ b/src/app/view_components/register/register.component.css
@@ -17,72 +17,8 @@ div.layout {
     display: block;
     align-items: center;
 }
-form.flex{
-  display: flex;
-  align-self: center;
-  flex-flow: column;
-  flex-direction: column;
-  position: relative;
-    top: 50%;
-    left: 0;
-    transform: translate(0%, -50%);
-
-}
-form.flex>.col2{
-  width: 100%;
-  padding: 3%;
-}
-div.layout .col2 {
-  display: flex;
-  flex-direction: row;
-  align-content: center;
-  flex-wrap: wrap;
-}
-div.layout div.col2.header{
-  height: 0px;
-  align-items: center;
-  flex-wrap: nowrap;
-}
-div.layout div.col2.header>*{
-  flex: 1 1 0%;
-}
-div.layout div.col2.header>i{
-  flex-grow: 0;
-  display: block;
-  padding: 2vmin;
-  font-size: 30pt;
-  color: #fff8;
-  background-size: cover;
-  background-position: center;
-  background-color: var(--primary-color-light);
-  border-radius: 10vmin;
-}
-div.layout div.col2.header:hover>i{
-  color: #fff;
-}
-div.layout mat-form-field{
-    margin: 3%;
-    padding: 2vmin;
-    flex: 1 0 20%;
-
-}
-
-
-div.mat-card-actions{
-  display: flex;
-  flex-flow: row;
-  margin: 3%;
-}
-.mat-card-actions button {
-  width: 100%;
-}
-div.mat-card-actions, div.mat-card-actions~*{
-  flex-grow: 1;
-}
-div.mat-card-actions + a, div.mat-card-actions + a:visited {
-  color: var(--primary-color);
-  font-weight: lighter;
-  text-align: center;
+user-registration-panel{
+  display: contents;
 }
 @media(orientation: portrait){
   div.container{
@@ -92,27 +28,10 @@ div.mat-card-actions + a, div.mat-card-actions + a:visited {
     width: 35vmax;
     height: 75vmax;
   }
-  form.flex{
-    width: 100%;
-    height: 85%;
-    align-items: center;
-    flex-flow: column;
-  flex-direction: column;
-  }
-  form.flex>.col2{
-    width: 100%;
-  }
-  form.flex>*:not(.mat-card-actions){
-    height: 100%;
-  }
+
 }
 @media only screen and (orientation: landscape) and (max-height: 720px){
   div.container{
     z-index: 4;
-  }
-  div.layout mat-form-field{
-    margin: 1%;
-    width: 0%;
-    flex: 1 0 40%;
   }
 }
