--- a/src/app/subcomponents/user-thumbnail/user-thumbnail.component.css
+++ b/src/app/subcomponents/user-thumbnail/user-thumbnail.component.css
@@ -21,20 +21,11 @@ div.Image{
   padding-left: 0%;
   position: relative;
   display: flex;
+  justify-content: center;
   overflow: hidden;
 }
-div.Image div.img{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1.0);
-
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-origin: padding-box;
+div.Image img{
+  max-height: 100%;
 }
 a.address {
   font-weight: lighter;
