--- a/src/app/view_components/about/about.component.html
+++ b/src/app/view_components/about/about.component.html
@@ -1,1 +1,5 @@
 <p style="padding: 5px;"> This is the about page that describes your app</p>
+
+<mat-card>
+  <question-editor></question-editor>
+</mat-card>
