Added question components

--- a/src/app/minicomponents/sidenav/sidenav.component.html
+++ b/src/app/minicomponents/sidenav/sidenav.component.html
@@ -57,7 +57,7 @@
 
 
 
-  <mat-list-item (click)="goto('/about')">
+  <mat-list-item (click)="goto('/questions')">
     <a matLine>Quizzes</a>
     <button mat-icon-button>
       <mat-icon>help</mat-icon>
