--- a/src/app/panels/question-editor/question-editor.component.html
+++ b/src/app/panels/question-editor/question-editor.component.html
@@ -41,9 +41,9 @@
     <mat-icon>add</mat-icon>
     <b>Add an option</b>
   </button>
-  <button mat-button (click)="submit_question()" color="primary">
-    <mat-icon>visibility</mat-icon>
-    <b>View</b>
+  <button mat-flat-button (click)="submit_question()" color="primary">
+    <mat-icon>check_circle</mat-icon>
+    Apply
   </button>
 </mat-action-list>
 
