--- a/src/app/subcomponents/question-card/question-card.component.css
+++ b/src/app/subcomponents/question-card/question-card.component.css
@@ -3,6 +3,15 @@ mat-card-content{
   flex-wrap: wrap;
   margin-left: 3%;
 }
-mat-checkbox{
+mat-checkbox, span, h1{
   flex: 100% 1 1;
+}
+h1{
+  margin: 0;
+}
+span{
+  margin-bottom: 10px;
+}
+div.title{
+  flex-grow: 1;
 }
