--- a/src/app/view_components/post-page/post-page.component.css
+++ b/src/app/view_components/post-page/post-page.component.css
@@ -1,206 +1,20 @@
-mat-card{
-  background:#fff;
-  color:#424242;
-}
-.mat-card-subtitle {
-    color: var(--secondary-color);
-    width: 100%;
-}
-
-.mat-card-header {
-  display: flex;
-  width: 100%;
-  flex-direction: row;
-  position: relative;
-  flex-wrap: wrap-reverse;
-}
-
-mat-card-info{
-  display: flex;
-  flex-direction: column-reverse;
-  min-height: 20vmin;
-}
-div.Image{
-  padding-top: 25%;
-  padding-left: 0%;
-  position: relative;
-  display: flex;
-  overflow: hidden;
-  width: 100%;
-  height : 20vh;
-}
-
-
-mat-card div.img{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1.0);
-
+.example-header-image {
   background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-origin: padding-box;
 }
-
-div.Image::before {
-  content: "";
-  width: 100%;
-  background-color: var(--primary-color);
-  mix-blend-mode: luminosity;
-  opacity: 0.2;
-  height: 100%;
-  position: absolute;
-  top: 0;
+.mat-card-image{
+  width: calc(100% + 16px);
 }
-div.Image::after {
-  content: "";
-    font-size: 2vw;
-    width: 100%;
-    background-color: #2b2b2b;
-    color: hsl(360, 100%, 100%);
-    opacity: 0;
-    mix-blend-mode: hard-light;
-    width: 100%;
-    position: absolute;
-    left: 0;
-    bottom: 0vh;
-    transform: translateY(100%);
-    text-align: center;
-    padding: calc(100% - 8vw) 0%;
+.skills{
+  display: flex;
+  align-items: center;
+  color: var(--primary-color);
+  background-color: transparent;
+  transition: all .05s ease-in;
 }
-div.Image:hover::after {
-  opacity: 1;
-  transform: translateY(0%);
-  bottom: 0vh;
+.skills:hover{
+  color: var(--secondary-color);
 }
-div.Image:hover div.img {
-  transform: translate(-50%, -50%) scale(1.25);
-}
-div.Image[focus=true]{
-  position: fixed;
-    z-index: 2;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: hsla(100,100%,0%,.77);
-}
-div.Image[focus=true] div.img{
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(.85);
-  z-index: 2;
-  height: 90vh;
-  width: 90vw;
-  background-size: contain;
-}
-div.Image[focus=true]:hover div.img {
-  transform: translate(-50%, -50%) scale(.855);
-}
-/* Offer meta-data */
-mat-card-contents ul{
-  list-style-type: none;
-}
-mat-card-contents ul>li>h2{
+.skills h2{
   margin-bottom: 0;
-}
-
-mat-card-info{
-  flex-wrap: wrap;
-  flex-direction: row;
-}
-
-mat-card-contents{
-  display: inline-block;
-  width: 100%;
-  margin: 2% 0%;
-
-  width: unset;
   flex-grow: 1;
-}
-
-
-
-/* description field */
-p{
-  margin: 0;
-  padding: 7pt 1rem;
-  width: 100%;
-
-  --lh: 12pt;
-  font-size: var(--lh);
-  position: relative;
-
-}
-
-@media (orientation: portrait) {
-  mat-card{
-    width: 90%;
-  }
-  div.Image {
-    width: 100%;
-    height : 20vh;
-    padding: 10vh 0%;
-    margin: 5% 0%;
-  }
-  mat-card-info {
-    flex-direction: column-reverse;
-  }
-  mat-card-subtitle {
-    flex-direction: column;
-    width: 100%;
-    display: flex;
-  }
-
-  mat-card div.img{
-    height : 100%;
-  }
-  div.Image::after {
-    font-size: 24pt;
-    padding: calc(20vh - 14pt) 0%;
-  }
-  p{
-    --lh: 12pt;
-    --max-lines: 3;
-    max-height: calc(var(--lh) *  var(--max-lines));
-    width: 90%;
-    overflow: hidden;
-  }
-  p::after {
-    position: absolute;
-      content: "Read more";
-      width: 30%;
-      border-radius: var(--lh);
-      max-height: calc(1.5*var(--lh));
-      text-align: center;
-
-      transform: translate(-50%, calc(0.2*var(--lh)));
-      left: 50%;
-      bottom: calc(0*var(--lh));
-      opacity: 0;
-      background: #000;
-      color: white;
-      box-shadow: 0px 2px 3pt 0px #424242;
-      mix-blend-mode: normal;
-
-      transition: all .5s ease;
-  }
-  p:hover::after {
-      bottom: calc(0.5*var(--lh));
-      opacity: 1;
-  }
-
-  p[shrink_text=false]{
-    max-height: calc(var(--lh) * 100 * var(--max-lines));
-  }
-  p[shrink_text=false]::after{
-    content: "Read less";
-  }
-  div.Image[focus=true] div.img{
-    width: 95vw;
-  }
 }
