--- a/src/app/view_components/post-page/post-page.component.html
+++ b/src/app/view_components/post-page/post-page.component.html
@@ -1,37 +1,38 @@
-<mat-card style="margin-top:10px;" @developDown [ngClass]="{'noEmbed' : !embed}">
-  <mat-card-content>
-    <mat-card-info>
-      <div class="Image" [attr.focus]="false" (click)="toggleFocus($event)" *ngIf="post.imageUrl && post.imageUrl.toString() !== ''">
-        <div class="img" [ngStyle]="{'background-image': 'url(' + post.imageUrl + ')'}"></div>
+<mat-card-header>
+  <div mat-card-avatar class="example-header-image" [ngStyle]="{'background-image': 'url('+post.owner.imageUrl+')'}"></div>
+  <mat-card-title>{{ post.title }}</mat-card-title>
+  <mat-card-subtitle>Posted on {{ post.timestamp }}</mat-card-subtitle>
+</mat-card-header>
+<mat-card-actions>
+  <button mat-button>LIKE</button>
+  <button mat-button>SHARE</button>
+</mat-card-actions>
+<mat-card-content>
+  <mat-tab-group>
+    <mat-tab label="Basic informations">
+      <img mat-card-image *ngIf="post.imageUrl" [src]="sanitize(post.imageUrl)" alt="@{{ post.owner.email }}">
+      <p>
+        {{ post.description }}
+      </p>
+    </mat-tab>
+    <mat-tab label="Job requirements" *ngIf="post.subject.toLowerCase() == 'job' && post.type.toLowerCase() == 'offer'">
+      <div class="skills" *ngFor="let skill of post.requiredSkills"> <!-- ngfor skill in newpost.required_skills -->
+        <h2>{{ skill.skill }}</h2>
+        <div>
+          <mat-icon *ngFor="let i of [1, 2, 3, 4, 5]">
+            {{ i < skill.level ? 'star':'star_outline'}}
+          </mat-icon>
+        </div>
+      </div>
+    </mat-tab>
+    <mat-tab label="Job constraints">
+      <div style="flex-direction:column;">
+        <mat-checkbox *ngFor="let day of days" [checked]="post.workdays.includes(day)">
+          {{ day }}
+        </mat-checkbox>
       </div>
 
-      <mat-card-contents>
-        <mat-card-header>
+    </mat-tab>
+  </mat-tab-group>
+</mat-card-content>
 
-          <mat-card-title>
-            {{post.title}}
-          </mat-card-title>
-
-          <mat-card-badges>
-            <post-badge class="{{ badge.category }}" *ngFor="let badge of post.badges" [badge]="badge"></post-badge>
-          </mat-card-badges>
-
-          <mat-card-subtitle>
-            <span>Hello&nbsp;</span>
-          </mat-card-subtitle>
-        </mat-card-header>
-        <p [attr.shrink_text]="false">
-          <span>
-            {{post.description}}<br>
-          </span>
-        </p>
-      </mat-card-contents>
-
-    </mat-card-info>
-    <mat-card-actions>
-      <button mat-button>Liker</button>
-      <!-- <button mat-button>Ajouter aux favoris</button> -->
-    </mat-card-actions>
-  </mat-card-content>
-
-</mat-card>
