Post follow and view more

--- a/src/app/panels/new-job-demand/new-job-demand.component.html
+++ b/src/app/panels/new-job-demand/new-job-demand.component.html
@@ -73,14 +73,14 @@
             <mat-label>Working hours</mat-label>
             <mat-slider
                 class="example-margin"
-                name="workhours"
+                name="regular_workhours"
                 [disabled]="false"
                 [invert]="false"
                 [max]="12"
                 [min]="0"
                 [thumbLabel]="true"
                 [tickInterval]="12"
-                [(ngModel)]="newPost.workhours"
+                [(ngModel)]="newPost.regular_workhours"
                 [vertical]="false">
             </mat-slider>
           </div>
